Add train dataset and fix notebook issue

--- a/Data-Processing.ipynb
+++ b/Data-Processing.ipynb
@@ -11,14 +11,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Configure display of dataframe visualizations\n",
+    "pd.options.display.mpl_style = 'default'"
    ]
   },
   {
@@ -32,6 +33,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -383,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rooted_df = train_df_features.applymap(lambda x: math.sqrt(abs(x))*x/abs(x) if x != 0 else 0 ) # Add one to avoid division by 0 error\n",
@@ -509,7 +513,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_skewed_df = pd.DataFrame([])\n",
@@ -546,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Select the columns which had the best skew (close to 0)\n",
@@ -663,7 +671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
