Add dataset folder for multiple datasets

--- a/Data-Processing.ipynb
+++ b/Data-Processing.ipynb
@@ -11,12 +11,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "data_dir = os.path.join('datasets', 'titanic')\n",
     "\n",
     "# Configure display of dataframe visualizations\n",
     "pd.options.display.mpl_style = 'default'"
@@ -38,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"train.csv\")"
+    "train_df = pd.read_csv(os.path.join(data_dir, \"train.csv\"))"
    ]
   },
   {
@@ -49,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"test.csv\")"
+    "test_df = pd.read_csv(os.path.join(data_dir, \"test.csv\"))"
    ]
   },
   {
@@ -74,6 +78,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -97,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Plot heat map of variable correlation\n",
@@ -119,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df_features.describe()"
@@ -149,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df_features.boxplot()"
@@ -158,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df_features.hist()"
@@ -168,6 +181,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -186,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df.groupby('Survived')[\"Age\"].hist(alpha=.4)"
@@ -195,7 +211,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df.groupby('Survived')[\"Pclass\"].hist(alpha=.4)"
@@ -204,7 +222,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df.groupby('Survived')[\"Parch\"].hist(alpha=.4)"
@@ -236,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get skewness of data\n",
@@ -253,7 +275,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get kurtosis of data\n",
@@ -293,6 +317,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -304,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kurtosis_df['kurtosis_normalized'] = train_df_features_normalized.kurtosis()\n",
@@ -350,7 +377,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "skew_df[\"skew_logged\"] = logged_df.skew()\n",
@@ -360,7 +389,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kurtosis_df[\"kurtosis_logged\"] = logged_df.kurtosis()\n",
@@ -397,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "skew_df[\"skew_rooted\"] = rooted_df.skew()\n",
@@ -407,7 +440,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kurtosis_df[\"kurtosis_rooted\"] = rooted_df.kurtosis()\n",
@@ -478,6 +513,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -496,7 +532,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Logistic Regression\")\n",
@@ -525,7 +563,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_df_features.columns.values"
@@ -534,7 +574,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "skew_df"
@@ -543,7 +585,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "kurtosis_df"
@@ -591,7 +635,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Gaussian Naive Bayes\")\n",
@@ -601,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Logistic Regression\")\n",
@@ -618,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Gaussian Naive Bayes\")\n",
@@ -628,7 +678,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Logistic Regression\")\n",
