--- a/Baseline-improvement-1.ipynb
+++ b/Baseline-improvement-1.ipynb
@@ -17,7 +17,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "data_dir = os.path.join('datasets', 'titanic')"
    ]
   },
   {
@@ -31,11 +33,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"train.csv\")\n",
+    "train_df = pd.read_csv(os.path.join(data_dir, \"train.csv\"))\n",
     "train_df"
    ]
   },
@@ -48,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Not used for now (a kaggle thing)\n",
-    "test_df = pd.read_csv(\"test.csv\")"
+    "test_df = pd.read_csv(os.path.join(data_dir, \"test.csv\"))"
    ]
   },
   {
@@ -74,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# To get rid of NaN values which the model cannot handle, eliminated entire rows for now...\n",
@@ -97,6 +102,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -112,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ml_columns"
@@ -139,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y = train_df['Survived']"
@@ -169,7 +179,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import, initialize and train a model\n",
@@ -188,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.score(X_test, y_test)"
@@ -204,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
@@ -215,7 +231,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.score(X_test, y_test)"
@@ -258,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
