--- a/Baseline.ipynb
+++ b/Baseline.ipynb
@@ -17,7 +17,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os\n",
+    "data_dir = os.path.join('datasets', 'titanic')"
    ]
   },
   {
@@ -32,11 +34,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"train.csv\")\n",
+    "train_df = pd.read_csv(os.path.join(data_dir, \"train.csv\"))\n",
     "train_df"
    ]
   },
@@ -49,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Not used for now (a kaggle thing)\n",
-    "test_df = pd.read_csv(\"test.csv\")"
+    "test_df = pd.read_csv(os.path.join(data_dir, \"test.csv\"))"
    ]
   },
   {
@@ -152,7 +155,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Import, initialize and train a model\n",
@@ -171,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.score(X_test, y_test) # Accuracy"
@@ -194,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
